SERVER-66503 Skip unindexing from `_id` index when handling duplicate record for logical initial sync